fixed aligning for image

--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ p{
 }
 
 img{
-    margin-left: auto;
-    margin-right: auto;
+    text-align:center;
     width: 550px;
 }
 
